# ATRX_Mind

./: .gitignore.txt  README.md  pyproject.toml  requirements.txt  requirements.txt.txt
config/: features.yaml  training.yaml
core/features/: __init__.py  compute_features.py
data/datasets/: audit2_small_2k.parquet
docs/: audit2_post_nan_fix_report.md  ml_pipeline_summary.md
scripts/: assemble_dataset.py  normalize_to_parquet.py  split_time_series.py  verify_features.py  verify_labels.py  verify_ml_pipeline.py  verify_parquet.py
tests/: conftest.py  test_dataset_assembly.py  test_features.py  test_labeling.py  test_time_series_splitting.py  test_training.py
trainers/: __init__.py  base_trainer.py  train_cnn.py  train_lstm.py  train_xgboost.py
trainers/labeling/: __init__.py  label_regimes.py
